@@ -349,6 +349,7 @@ public:
 						speed, delay, dist, maxblk); }
 					// Start animation.
 	void start(int speed = 250, int delay = 0);
+	void start_std();		// Start with std. speed, delay.
 	void stop();			// Stop animation.
 	void follow(Actor *leader);	// Follow the leader.
 					// Approach another from offscreen.
